tests/invalid/test_missing_run.tl
// Invalid Test: Missing RUN statement
TASK backupDB {
    EVERY DAY AT 02:00
}
